# AutoLoop

./: .gitignore  API.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  RELEASE_NOTES_v0.1.0-alpha.md  build.rs  docker-compose.yml
.github/workflows/: ci.yml
autoloop-spacetimedb-adapter/: Cargo.toml
autoloop-spacetimedb-adapter/src/: lib.rs
dashboard-ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard-ui/src/: App.vue  data.ts  main.ts  styles.css  types.ts
demo/: RECORDING_CHECKLIST.md  e2e-5min.ps1  e2e-5min.sh
deploy/: deploy.ps1
deploy/backup/: backup.ps1  restore.ps1
deploy/config/: autoloop.dev.toml  autoloop.prod.toml
deploy/k8s/: autoloop-deployment.yaml  autoloop-external-secret.yaml  autoloop-secret-template.yaml  autoloop-servicemonitor.yaml  browserless-deployment.yaml  browserless-secret-template.yaml  playwright-worker-deployment.yaml
deploy/monitoring/: README.md  alertmanager-config.yaml  prometheus-rules.yaml  prometheus.yml
deploy/scripts/: start-autoloop.ps1  start-autoloop.sh
docs/: ISSUE_BACKLOG_v0.1.0-alpha.md
examples/: spacetimedb_sdk.rs
spacetimedb/: Cargo.toml
spacetimedb/src/: lib.rs
src/: adaptive_framework.rs  agentevolver_task_core.rs  dashboard_server.rs  lib.rs  main.rs
src/agent/: mod.rs
src/bus/: mod.rs
src/config/: mod.rs
src/evolution/: mod.rs
src/hooks/: mod.rs
src/memory/: learning.rs  mod.rs  sidecar.rs
src/module_bindings/: README.md  mod.rs
src/observability/: mod.rs
src/orchestration/: mod.rs
src/providers/: mod.rs
src/rag/: graph_core.rs  mod.rs  model.rs  retrieval.rs
src/research/: mod.rs
tests/: working_smoke.rs
(+70 files in other folders)
