[package]
name = "autoloop-spacetimedb-module"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Server-side SpacetimeDB module schema for AutoLoop"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
test = false
doctest = false

[dependencies]
serde = { version = "1", features = ["derive"] }
spacetimedb = "2.0.5"
